# sheba

./: .gitignore  pyproject.toml
src/common/: __init__.py  coralogix_connector.py  event_handler.py  local_git.py  models.py  utils.py
src/sheba/: ilana.py  main.py  ori.py
src/whatsapp-router/: router.py
